deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: database
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        namespace: database
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
---

apiVersion: v1
kind: Service
metadata:
  namespace: database
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql

---

apiVersion: v1
kind: Namespace
metadata:
  name: ems

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ems
  name: ems-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ems.pepperkick.com
      http:
        paths:
          - path: /
            backend:
              serviceName: server
              servicePort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-deployment
  namespace: ems
  labels:
    app: ems
spec:
  selector:
    matchLabels:
      app: ems
  template:
    metadata:
      labels:
        namespace: ems
        app: ems
    spec:
      containers:
        - name: ems-server
          image: pepperkick/ems:1.0.0
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  namespace: ems
  name: server
spec:
  type: ClusterIP
  selector:
    app: ems
  ports:
    - port: 8080
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems
  namespace: obs-testing
spec:
  rules:
    - host: ems.env-abhi-cluster.kind.onprem.dmsuitecloud.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 8080
